unpackaged/main/default/objects/Email_Notification_Management__c/Email_Notification_Management__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Email Notification Management</label>
</CustomObject>