unpackaged/main/default/objects/Email_Notification_Management__c/fields/Approved_and_Reassigned_MCO_Alert__c.field-meta.xml
<CustomField>
    <fullName>Approved_and_Reassigned_MCO_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved and Reassigned MCO Alert</label>
    <type>Checkbox</type>
</CustomField>