unpackaged/main/default/objects/Email_Notification_Management__c/fields/Chargent_Transaction_Recovery_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Chargent_Transaction_Recovery_Recipient__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used in the Chargent Transaction - After Save Actions flow</description>
    <label>Chargent Transaction Recovery Recipient</label>
    <type>Checkbox</type>
</CustomField>