unpackaged/main/default/objects/Email_Notification_Management__c/fields/Helpdesk_Email__c.field-meta.xml
<CustomField>
    <fullName>Helpdesk_Email__c</fullName>
    <label>Helpdesk Email</label>
    <type>Email</type>
</CustomField>