unpackaged/main/default/objects/Email_Notification_Management__c/fields/MCA_Funding_Inbox__c.field-meta.xml
<CustomField>
    <fullName>MCA_Funding_Inbox__c</fullName>
    <label>MCA Funding Inbox</label>
    <type>Email</type>
</CustomField>