unpackaged/main/default/objects/Email_Notification_Management__c/fields/NF_Compliance_Email__c.field-meta.xml
<CustomField>
    <fullName>NF_Compliance_Email__c</fullName>
    <description>Used in the Case - Affidavit Reminder Notification flow</description>
    <label>NF Compliance Email</label>
    <type>Email</type>
</CustomField>