unpackaged/main/default/objects/Email_Notification_Management__c/fields/Send_Doc_Request_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Doc_Request_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Doc Request Email</label>
    <type>Checkbox</type>
</CustomField>